2009-02-20	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#42400 InnoDB autoinc code can't handle floating-point columns

2009-02-18	The InnoDB Team

	* include/ut0mem.h, os/os0proc.c, ut/ut0mem.c:
	Protect ut_total_allocated_memory with ut_list_mutex in
	os_mem_alloc_large() and os_mem_free_large(). The lack of this mutex
	protection could cause an assertion failure during fast index
	creation. Also, add UNIV_MEM_ALLOC and UNIV_MEM_FREE instrumentation
	to os_mem_alloc_large() and os_mem_free_large(), so that Valgrind can
	detect more errors.

2009-02-11	The InnoDB Team

	* handler/ha_innodb.cc:
	Make innodb_thread_concurrency=0 the default. The old default value
	was 8. A non-zero setting may be useful when InnoDB is showing severe
	scalability problems under multiple concurrent connections.

2009-02-10	The InnoDB Team

	* handler/ha_innodb.cc, handler/ha_innodb.h:
	Fix Bug#41676 Table names are case insensitive in locking

2009-02-10	The InnoDB Team

	* mem/mem0dbg.c, mem/mem0mem.c, mem/mem0pool.c:
	When innodb_use_sys_malloc is set, ignore
	innodb_additional_mem_pool_size, because nothing will be allocated
	from mem_comm_pool.

2009-02-10	The InnoDB Team

	* ut/ut0mem.c:
	Map ut_malloc_low(), ut_realloc(), and ut_free() directly to malloc(),
	realloc(), and free() when innodb_use_sys_malloc is set. As a side
	effect, ut_total_allocated_memory ("Total memory allocated" in the
	"BUFFER POOL AND MEMORY" section of SHOW ENGINE INNODB STATUS) will
	exclude any memory allocated by these functions when
	innodb_use_sys_malloc is set.

2009-02-10	The InnoDB Team

	* btr/btr0cur.c, btr/btr0sea.c, buf/buf0buf.c, handler/ha_innodb.cc,
	include/buf0buf.ic, include/os0sync.h, include/srv0srv.h,
	include/sync0rw.h, include/sync0rw.ic, include/sync0sync.h,
	include/sync0sync.ic, include/univ.i, row/row0sel.c, srv/srv0srv.c,
	srv/srv0start.c, sync/sync0arr.c, sync/sync0rw.c, sync/sync0sync.c: